test/functions/vass/proc-iter/error-yield-in-proc-1.chpl
proc i11d() {
  yield "11d";
}
i11d();
